--- a/app/views/web/ost/index/_apps_built.erb
+++ b/app/views/web/ost/index/_apps_built.erb
@@ -1,13 +1,13 @@
 <section class="container-apps-built">
   <div class="container text-center my-6">
     <h2 class="midnight-blue">Apps Built with the Ost Wallet SDK</h2>
-    <p class="mb-md-6 pb-5 sub-heading font-weight-bold text-uppercase mt-4">&mdash;Live on Ethereum&mdash;</p>
-    <div class="d-block d-md-none mb-6 pb-6 pb-md-0 ">
+    <p class="mb-xl-6 pb-5 sub-heading font-weight-bold text-uppercase mt-4">&mdash;Live on Ethereum&mdash;</p>
+    <div class="d-block d-xl-none mb-6 pb-6 pb-xl-0 ">
       <img src="https://d3attjoi5jlede.cloudfront.net/images/pre-launch/pepo-logo.png" alt="Pepo Icon " class="img-fluid mb-3" width="168">
       <p class="desc-p-one">Meet the people shaping the crypto movement</p>
     </div>
-    <div class="shadow-box m-1 m-md-0 row">
-      <div class="col-12 col-md-4 video-wrapper pr-0">
+    <div class="shadow-box m-1 m-xl-0 row">
+      <div class="col-12 col-xl-4 video-wrapper pr-0">
         <div class="videoWrapper">
         <video autoplay="" loop="" muted="" playsinline="" poster="https://d3attjoi5jlede.cloudfront.net/images/pre-launch/pepo-jumbo-video-cover.png" style="width: 300px">
           <source src="https://d3attjoi5jlede.cloudfront.net/images/pre-launch/pepo-jumbo-video-normal.mp4" type="video/mp4">
@@ -19,24 +19,24 @@
         </div>
         </div>
       </div>
-      <div class="col-12 col-md-7 text-center text-md-left pl-0 text-section">
+      <div class="col-12 col-xl-7 text-center text-xl-left pl-0 text-section">
         <div class="row px-0 mx-0">
 
 
-        <div class="d-none d-md-block col-12 px-0" style="margin-top: 40px">
+        <div class="d-none d-xl-block col-12 px-0" style="margin-top: 40px">
           <img src="https://d3attjoi5jlede.cloudfront.net/images/pre-launch/pepo-logo.png" alt="Pepo Icon " class="img-fluid" width="168">
           <p class="desc-p-one" style="margin-top: 10px">Meet the people shaping the crypto movement</p>
         </div>
 
-        <p class="col-12 desc-p-two order-3 order-md-1 px-0">
+        <p class="col-12 desc-p-two order-3 order-xl-1 px-0">
           Pepo demonstrates crypto UX can be gorgeous. Ost technology makes Pepo so fast and easy to use you’ll
           re-imagine what’s possible for crypto apps.<br>
           Pepo is the first crypto app approved by Apple and Google, with in-app purchase and cash-out options.
         </p>
-        <a href="https://decrypt.co/10091/taking-ethereum-mainstream-social-media-app-pepo-goes-live-at-devcon-5" class="col-12 desc-p-three font-weight-600 font-italic font mb-0 order-1 order-md-2 px-0">
+        <a href="https://decrypt.co/10091/taking-ethereum-mainstream-social-media-app-pepo-goes-live-at-devcon-5" class="col-12 desc-p-three font-weight-600 font-italic font mb-0 order-1 order-xl-2 px-0">
           "Pepo shows that blockchain is ready for primetime."
         </a>
-        <p class="col-12 order-2 order-md-3 px-0 quote-by">
+        <p class="col-12 order-2 order-xl-3 px-0 quote-by">
           - Decrypt.co
         </p>
 <!--        <p class="col-12 mb-0 font-weight-bold d-none d-md-block order-md-4 px-0" style="margin-top: 45px">-->
@@ -54,7 +54,7 @@
           <a href="https://play.google.com/store/apps/details?id=com.pepo.v2.production" target="_blank" title="Download Pepo App - Android" class="d-inline-block" rel="noopener noreferrer nofollow">
             <img src="https://d3attjoi5jlede.cloudfront.net/images/pre-launch/google-play.png" alt="Google Play" class="img-fluid android-app-link">
           </a>
-          <a href="https://apps.apple.com/app/pepo-by-ost/id1479691067" target="_blank" title="Download Pepo App - iOS" class="ml-lg-3 mt-lg-0 d-inline-block" rel="noopener noreferrer nofollow">
+          <a href="https://apps.apple.com/app/pepo-by-ost/id1479691067" target="_blank" title="Download Pepo App - iOS" class="ml-xl-3 mt-xl-0 d-inline-block" rel="noopener noreferrer nofollow">
             <img src="https://d3attjoi5jlede.cloudfront.net/images/pre-launch/app-store.png" alt="App Store" class="img-fluid ios-app-link" >
           </a>
         </div>
