--- a/app/views/web/ost/index/_developer_first.erb
+++ b/app/views/web/ost/index/_developer_first.erb
@@ -35,8 +35,15 @@
           <div class="col-12 col-md-6 mb-3 mb-md-0">
             <div class="border-box p-4 h-100 d-flex flex-column justify-content-between">
               <div>
-                <h5 class="border-box-title">Server SDKs</h5>
-                <p class="border-box-info">
+                <div class="align-items-center d-flex">
+                  <svg width="30" height="48">
+                    <switch>
+                      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#server-sdk"></use>
+                    </switch>
+                  </svg>
+                  <h5 class="ml-3 border-box-title">Server SDKs</h5>
+                </div>
+                <p class="border-box-info mt-2">
                   Server-side SDKs (in Java, Node.js, PHP, and Ruby) that allow you to retrieve token details, register users,
                   and distribute tokens to your users.
                 </p>
@@ -49,8 +56,15 @@
           </div>
           <div class="col-12 col-md-6">
             <div class="border-box p-4 h-100 d-flex flex-column justify-content-between">
-              <h5 class="border-box-title">Wallet SDKs</h5>
-              <p class="border-box-info">
+              <div class="align-items-center d-flex">
+                <svg width="30" height="48">
+                  <switch>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#wallet-sdk"></use>
+                  </switch>
+                </svg>
+                <h5 class="ml-3 border-box-title">Wallet SDKs</h5>
+              </div>
+              <p class="border-box-info mt-2">
                 Wallet SDKs (in Android, iOS, and React Native) that enable your end-users to hold tokens in non-custodial wallets and
                 to send and receive tokens. Your users can also authorise multiple devices, purchase tokens in-app and cash-out.
               </p>
