--- a/app/views/web/ost/index/_features_ost.erb
+++ b/app/views/web/ost/index/_features_ost.erb
@@ -5,9 +5,9 @@
         <div class="pt-4 d-flex flex-column text-center text-md-left">
           <div style="flex: 1 1 auto">
             <div class="align-items-center d-flex justify-content-center justify-content-md-start ">
-              <svg width="28" height="28">
+              <svg width="50" height="39">
                 <switch>
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#platform-hp-docs"></use>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#available-now"></use>
                 </switch>
               </svg>
               <h5 class="header-text d-inline-block ml-3 mb-0">Available Now</h5>
@@ -23,9 +23,9 @@
       <div class="pt-4 pl-md-4 d-flex flex-column text-center text-md-left">
         <div style="flex: 1 1 auto">
           <div class="align-items-center d-flex justify-content-center justify-content-md-start">
-            <svg width="28" height="28">
+            <svg width="50" height="50">
               <switch>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#platform-hp-docs"></use>
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dev-first"></use>
               </switch>
             </svg>
             <h5 class="header-text d-inline-block ml-3 mb-0">Developers First</h5>
@@ -41,9 +41,9 @@
     <div class="pt-4 pl-md-4 d-flex flex-column text-center text-md-left">
       <div style="flex: 1 1 auto">
         <div class="align-items-center d-flex justify-content-center justify-content-md-start">
-          <svg width="28" height="28">
+          <svg width="40" height="39">
             <switch>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#platform-hp-docs"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#regulatory-complaince"></use>
             </switch>
           </svg>
           <h5 class="header-text d-inline-block ml-3 mb-0">Regulatory Compliant</h5>
