--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -7,7 +7,7 @@
     <div class="container">
       <div class="row align-items-center mb-4">
 
-        <div class="col-md-6">
+        <div class="col-lg-6">
           <h2 class="midnight-blue"><%= ost_home_page_jumbotron[0]['jumbotron_title']%></h2>
           <p class="mt-3">
             <%= ost_home_page_jumbotron[0]['jumbotron_description']%>
@@ -28,7 +28,7 @@
 
         </div>
 
-        <div class="col-md-12 col-lg-6 text-center mt-3 mt-md-0">
+        <div class="col-lg-6 text-center mt-3 mt-md-0">
           <div class="illustration w-100 position-relative">
             <div class="btn-play" title="Watch Intro" data-toggle="modal" data-target="#helpVideoModal" data-src="<%= ost_home_page_jumbotron[0]['jumbotron_video_link'] %>">
               <div class="play btn btn-secondary">
