--- a/app/views/web/ost/index/_ost_wallet_sdk_features.erb
+++ b/app/views/web/ost/index/_ost_wallet_sdk_features.erb
@@ -1,8 +1,8 @@
 <section class="container-ost-wallet-unique-features position-relative">
-  <div class="position-absolute dots-texture d-none d-lg-block">
-    <img src="Dots.png" class="img-fluid">
-  </div>
-  <div class="container py-5">
+<!--  <div class="position-absolute dots-texture d-none d-lg-block">-->
+<!--    <img src="Dots.png" class="img-fluid">-->
+<!--  </div>-->
+  <div class="container py-5 dotwa">
     <h2 class="text-center pb-5 font-weight-bold midnight-blue">Unique Features Enabled by the <br/>Ost Wallet SDK</h2>
     <div class="row">
 
@@ -10,9 +10,9 @@
         <div class="p-4 d-flex flex-column info-box">
           <div style="flex: 1 1 auto">
             <div class="align-items-center d-flex">
-              <svg width="28" height="28">
+              <svg width="44" height="29">
                 <switch>
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#platform-hp-docs"></use>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-sandbox"></use>
                 </switch>
               </svg>
               <h5 class="header-text d-inline-block ml-3 mb-0">Free sandbox environment</h5>
@@ -28,9 +28,9 @@
         <div class="p-4 d-flex flex-column info-box">
           <div style="flex: 1 1 auto">
             <div class="align-items-center d-flex">
-              <svg width="28" height="28">
+              <svg width="25.5" height="33.5">
                 <switch>
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#platform-hp-docs"></use>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#non-custodial"></use>
                 </switch>
               </svg>
               <h5 class="header-text d-inline-block ml-3 mb-0">Self-custodial</h5>
@@ -47,9 +47,9 @@
         <div class="p-4 d-flex flex-column info-box">
           <div style="flex: 1 1 auto">
             <div class="align-items-center d-flex">
-              <svg width="28" height="28">
+              <svg width="28" height="48">
                 <switch>
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#platform-hp-docs"></use>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#low-cost"></use>
                 </switch>
               </svg>
               <h5 class="header-text d-inline-block ml-3 mb-0">Scalable, low-cost transactions</h5>
@@ -65,9 +65,9 @@
         <div class="p-4 d-flex flex-column info-box">
           <div style="flex: 1 1 auto">
             <div class="align-items-center d-flex">
-              <svg width="28" height="28">
+              <svg width="32.5" height="37">
                 <switch>
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#platform-hp-docs"></use>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#seamless-ux"></use>
                 </switch>
               </svg>
               <h5 class="header-text d-inline-block ml-3 mb-0">Seamless user experience</h5>
