--- a/app/views/web/ost/index/_apps_built.erb
+++ b/app/views/web/ost/index/_apps_built.erb
@@ -33,8 +33,10 @@
           re-imagine what’s possible for crypto apps.<br>
           Pepo is the first crypto app approved by Apple and Google, with in-app purchase and cash-out options.
         </p>
-        <a href="https://decrypt.co/10091/taking-ethereum-mainstream-social-media-app-pepo-goes-live-at-devcon-5" class="col-12 desc-p-three font-weight-600 font-italic font mb-0 order-1 order-xl-2 px-0">
-          "Pepo shows that blockchain is ready for primetime."
+        <a href="https://decrypt.co/10091/taking-ethereum-mainstream-social-media-app-pepo-goes-live-at-devcon-5"
+           rel="noopener noreferrer nofollow"
+           target="_blank" class="col-12 desc-p-three font-weight-600 font-italic font mb-0 order-1 order-xl-2 px-0">
+          <span class="font-weight-bold red-quotes">"</span>Pepo shows that blockchain is ready for primetime.<span class="font-weight-bold red-quotes">"</span>
         </a>
         <p class="col-12 order-2 order-xl-3 px-0 quote-by">
           - Decrypt.co
