--- a/app/assets/stylesheets/web/ost_theme/variables.scss
+++ b/app/assets/stylesheets/web/ost_theme/variables.scss
@@ -36,6 +36,7 @@ $onahau: #C7EAED;
 $bismark: #4C6375;
 $powder-blue: #AFE1E3;
 $crimson: #E7003B;
+$pepo-color : #FF5566;
 $cultured: #F4F8F9;
 $gulf-blue: #35445B;
 $regent-st-blue: #A5C7D7;
