font weight added

--- a/app/assets/stylesheets/web/ost_theme/variables.scss
+++ b/app/assets/stylesheets/web/ost_theme/variables.scss
@@ -309,6 +309,7 @@ $font-weight-bold:            700 !default;
 
 $font-weight-100:             100 !default;  //customized
 $font-weight-200:             200 !default;  //customized
+$font-weight-300:             300 !default;  //customized
 $font-weight-500:             500 !default;  //customized
 $font-weight-600:             600 !default;  //customized
 $font-weight-700:             700 !default;  //customized
