--- a/app/views/web/ost/index/_apps_built.erb
+++ b/app/views/web/ost/index/_apps_built.erb
@@ -19,7 +19,7 @@
         </div>
         </div>
       </div>
-      <div class="col-12 col-xl-7 text-center text-xl-left pl-0 text-section">
+      <div class="col-12 col-xl-7 text-center text-xl-left pl-0 text-section pr-0">
         <div class="row px-0 mx-0">
 
 
@@ -36,7 +36,7 @@
         <a href="https://decrypt.co/10091/taking-ethereum-mainstream-social-media-app-pepo-goes-live-at-devcon-5"
            rel="noopener noreferrer nofollow"
            target="_blank" class="col-12 desc-p-three font-weight-600 font-italic font mb-0 order-1 order-xl-2 px-0">
-          <span class="font-weight-bold red-quotes">"</span>Pepo shows that blockchain is ready for primetime.<span class="font-weight-bold red-quotes">"</span>
+          <span class="font-weight-bold red-quotes">" </span>Pepo shows that blockchain is ready for primetime.<span class="font-weight-bold red-quotes">"</span>
         </a>
         <p class="col-12 order-2 order-xl-3 px-0 quote-by">
           - Decrypt.co
