--- a/app/views/web/ost/index/_apps_built.erb
+++ b/app/views/web/ost/index/_apps_built.erb
@@ -54,10 +54,10 @@
         </div>
         <div class="app-links">
           <a href="https://play.google.com/store/apps/details?id=com.pepo.v2.production" target="_blank" title="Download Pepo App - Android" class="d-inline-block" rel="noopener noreferrer nofollow">
-            <img src="https://d3attjoi5jlede.cloudfront.net/images/pre-launch/google-play.png" alt="Google Play" class="img-fluid android-app-link">
+            <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-pepo-play-store.png" alt="Google Play" class="img-fluid android-app-link">
           </a>
           <a href="https://apps.apple.com/app/pepo-by-ost/id1479691067" target="_blank" title="Download Pepo App - iOS" class="ml-xl-3 mt-xl-0 d-inline-block" rel="noopener noreferrer nofollow">
-            <img src="https://d3attjoi5jlede.cloudfront.net/images/pre-launch/app-store.png" alt="App Store" class="img-fluid ios-app-link" >
+            <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-pepo-app-store.png" alt="App Store" class="img-fluid ios-app-link" >
           </a>
         </div>
       </div>
