--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -15,12 +15,12 @@
           <div class="row">
             <div class="col-12 col-md-6 pr-md-0">
               <% if ost_home_page_jumbotron[0]['primary_btn_enabled_flag'] == 'on' %>
-                <a href="<%= ost_home_page_jumbotron[0]['primary_btn_link'] %>" class="btn btn-primary my-2 my-md-3 smooth-scroll w-100 " title="<%= ost_home_page_jumbotron[0]['primary_btn_title'] %>"><%= ost_home_page_jumbotron[0]['primary_btn_title'] %></a>
+                <a href="<%= ost_home_page_jumbotron[0]['primary_btn_link'] %>" rel="noopener noreferrer nofollow" target="_blank" class="btn btn-primary my-2 my-md-3 smooth-scroll w-100 " title="<%= ost_home_page_jumbotron[0]['primary_btn_title'] %>"><%= ost_home_page_jumbotron[0]['primary_btn_title'] %></a>
               <% end %>
             </div>
             <div class="d-none d-md-block col-md-6 pl-0">
               <% if ost_home_page_jumbotron[0]['sec_btn_enabled_flag'] == 'on' %>
-                <a href="<%= ost_home_page_jumbotron[0]['sec_btn_link'] %>" class="btn btn-secondary my-md-3 ml-md-3 smooth-scroll" title="<%=ost_home_page_jumbotron[0]['sec_btn_title'] %>"><%= ost_home_page_jumbotron[0]['sec_btn_title']%></a>
+                <a href="<%= ost_home_page_jumbotron[0]['sec_btn_link'] %>" rel="noopener noreferrer nofollow" target="_blank" class="btn btn-secondary my-md-3 ml-md-3 smooth-scroll" title="<%=ost_home_page_jumbotron[0]['sec_btn_title'] %>"><%= ost_home_page_jumbotron[0]['sec_btn_title']%></a>
               <%end%>
             </div>
           </div>
