--- a/app/views/web/ost/index/_jumbotron_mobile.erb
+++ b/app/views/web/ost/index/_jumbotron_mobile.erb
@@ -18,12 +18,12 @@
             <div class="row">
               <% if ost_home_page_jumbotron[0]['primary_btn_enabled_flag'] == 'on' %>
                 <div class="col-12 ">
-                  <a href="<%= ost_home_page_jumbotron[0]['primary_btn_link'] %>" class="btn btn-primary my-2 equal-width smooth-scroll" title="<%= ost_home_page_jumbotron[0]['primary_btn_title'] %>"><%= ost_home_page_jumbotron[0]['primary_btn_title'] %></a>
+                  <a href="<%= ost_home_page_jumbotron[0]['primary_btn_link'] %>" rel="noopener noreferrer nofollow" target="_blank" class="btn btn-primary my-2 equal-width smooth-scroll" title="<%= ost_home_page_jumbotron[0]['primary_btn_title'] %>"><%= ost_home_page_jumbotron[0]['primary_btn_title'] %></a>
                 </div>
               <%end%>
               <% if ost_home_page_jumbotron[0]['sec_btn_enabled_flag'] == 'on' %>
                 <div class="col-12 ">
-                  <a href="<%= ost_home_page_jumbotron[0]['sec_btn_link'] %>" class="btn btn-secondary my-2 smooth-scroll" title="<%= ost_home_page_jumbotron[0]['sec_btn_title'] %>"><%= ost_home_page_jumbotron[0]['sec_btn_title'] %></a>
+                  <a href="<%= ost_home_page_jumbotron[0]['sec_btn_link'] %>" rel="noopener noreferrer nofollow" target="_blank" class="btn btn-secondary my-2 smooth-scroll" title="<%= ost_home_page_jumbotron[0]['sec_btn_title'] %>"><%= ost_home_page_jumbotron[0]['sec_btn_title'] %></a>
                 </div>
               <%end%>
             </div>
