--- a/app/views/web/ost/index/_apps_built.erb
+++ b/app/views/web/ost/index/_apps_built.erb
@@ -28,11 +28,17 @@
           <p class="desc-p-one" style="margin-top: 10px">Meet the people shaping the crypto movement</p>
         </div>
 
-        <p class="col-12 desc-p-two order-3 order-xl-1 px-0">
-          Pepo demonstrates crypto UX can be gorgeous. Ost technology makes Pepo so fast and easy to use you’ll
-          re-imagine what’s possible for crypto apps.<br>
-          Pepo is the first crypto app approved by Apple and Google, with in-app purchase and cash-out options.
-        </p>
+        <div class="col-12 desc-p-two order-3 order-xl-1 px-0">
+            <p class="mb-3">
+            Pepo demonstrates crypto UX can be gorgeous. Ost technology makes Pepo so fast and easy to use you’ll
+            re-imagine what’s possible for crypto apps.
+            </p>
+
+            <p>
+              Pepo is the first blockchain-powered app approved by Apple and Google with in-app purchase and cash-out options.
+              Download Pepo today and see for yourself!
+            </p>
+        </div>
         <a href="https://decrypt.co/10091/taking-ethereum-mainstream-social-media-app-pepo-goes-live-at-devcon-5"
            rel="noopener noreferrer nofollow"
            target="_blank" class="col-12 desc-p-three font-weight-600 font-italic font mb-0 order-1 order-xl-2 px-0">
