--- a/app/views/web/ost/index/_features_ost.erb
+++ b/app/views/web/ost/index/_features_ost.erb
@@ -13,7 +13,7 @@
               <h5 class="header-text d-inline-block ml-3 mb-0">Available Now</h5>
             </div>
             <p class="my-2 desc">
-              Launch your own layer-2 Ethereum-based token in minutes and embed it into your app. We're ready when you are.
+              Launch your own layer-2 Ethereum-based in-app currency in minutes and embed it into your app. Ost tech is live and ready to use today.
             </p>
           </div>
         </div>
@@ -49,8 +49,8 @@
           <h5 class="header-text d-inline-block ml-3 mb-0">Regulatory Compliant</h5>
         </div>
         <p class="my-2 desc">
-          Apps built with Ost are compliant. Approval from Apple and Google means users can buy tokens in-app and cash out.
-          No additional licenses needed.
+          Apps built with Ost are designed for compliance. Pepo by Ost is the 1st blockchain-powered app approved by
+          Apple and Google for in-app purchase and cash out options. No additional licenses needed.
         </p>
       </div>
     </div>
