--- a/app/views/web/ost/index/_ost_wallet_sdk_features.erb
+++ b/app/views/web/ost/index/_ost_wallet_sdk_features.erb
@@ -1,6 +1,6 @@
 <section class="container-ost-wallet-unique-features position-relative">
   <div class="container py-5 dotwa">
-    <h2 class="text-center pb-5 font-weight-bold midnight-blue">Unique Features Enabled by the <br/>Ost Wallet SDK</h2>
+    <h2 class="text-center pb-5 font-weight-bold midnight-blue">Unique Features of Ost Technology</h2>
     <div class="row">
 
       <div class="col-12 d-flex col-md-6 mb-4">
@@ -33,8 +33,12 @@
               <h5 class="header-text d-inline-block ml-3 mb-0">Self-custodial</h5>
             </div>
             <p class="my-2 desc">
-              Users own their private keys and have full control over their funds. If they lose a device, users can recover
-              their wallet with just a 6-digit PIN.
+              Users own their private keys and have full control over their funds. If they lose a device,
+              users can recover their wallet with just a 6-digit PIN.
+              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/wallet/features/#6-digit-user-pin"
+                 rel="noopener noreferrer nofollow"
+                 target="_blank"
+                 title="Learn how this works" >Learn how this works.</a>
             </p>
           </div>
         </div>
