--- a/app/views/web/ost/index/_prototype.erb
+++ b/app/views/web/ost/index/_prototype.erb
@@ -1,7 +1,7 @@
 <section class="prototypes-section my-6 position-relative mx-auto d-none d-lg-block">
 
   <div class="container-fluid">
-    <h2 class="text-center my-5 midnight-blue">Other Applications and Use Cases <br/>Made Possible with OST Wallet SDK</h2>
+    <h2 class="text-center my-5 midnight-blue">More Use Cases Made Possible with Ost Technology</h2>
     <div id="prototypes-carousal" class="clearfix">
       <div class="iframe-wrapper position-relative">
         <img class="iframe-cover-img" data-name="spoon" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/prototype-cover/spoon-v1.png" />
