--- a/app/views/web/ost/index/_ost_wallet_sdk_features.erb
+++ b/app/views/web/ost/index/_ost_wallet_sdk_features.erb
@@ -38,6 +38,7 @@
               <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/wallet/features/#6-digit-user-pin"
                  rel="noopener noreferrer nofollow"
                  target="_blank"
+                 class="underlined-link"
                  title="Learn how this works" >Learn how this works.</a>
             </p>
           </div>
