events minor fix

--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -175,6 +175,16 @@
               </a>
             </li>
             <li>
+              <a href="<%= GlobalConstant::Base.root_url %>events-news" class="nav-svg-link d-flex align-items-center" title="Events-News">
+                <svg class="nav-svg">
+                  <switch>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#events-news-dropdown"></use>
+                  </switch>
+                </svg>
+                <span class="pl-1">News & Events</span>
+              </a>
+            </li>
+            <li>
               <a href="https://medium.com/ostdotcom" target="_blank" class="nav-svg-link d-flex align-items-center" title="Blog">
                 <svg class="nav-svg">
                   <switch>
